fixed most of checkmate, only issue that remains is checking to see if king has any outs via other pieces